# ClothSimulation

./: .gitignore  CMakeLists.txt  Makefile  NRG_DN03.data  NRG_DN03.js  NRG_DN03.wasm  README.md  RenderDoc.cap  index.html
libs/stb/: stb_impl.c
src/: app.h  camera.h  input.c  main.c  webgpu-utils.c  webgpu-utils.h
